<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WTM de Boer bestel app</string>
    <string name="welkom">Welkom bij de WTM de Boer bestel app</string>
    <string name="plant">Plant</string>
    <string name="startknop">Assortiment</string>
    <string name="winkelwagen">Zet deze plant in de winkelwagen</string>
    <string name="terug">Terug naar assortiment</string>
    <string name="title_activity_winkelwagen">Winkelwagen</string>
    <string name="bestel">Plaats deze order</string>
    <string name="title_activity_sluit">Bedankt</string>
    <string name="bedankt">Bedankt voor uw bestelling, we nemen zo spoedig mogelijk contact op.</string>
    <string name="search_hint">Zoek plant</string>
    <string name="contact">Contact</string>
    <string name="home">Home</string>
    <string name="aantal">Aantal:</string>
    <string name="soort">Soort:</string>
    <string name="TekstvakAantal">Voer het gewenste aantal in</string>
    <string name="BekijkWinkelwagen">Bekijk de winkelwagen</string>
    <string name="gegevens">Voer hier uw gegevens in</string>
    <string name="bedrijf">Bedrijfsnaam</string>
    <string name="mail">e-mail adres</string>
    <string name="CD">Foto</string>
    <string name="title_activity_shoppingcart">ShoppingcartActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="instructie">Klik op een item om hem uit de lijst te verwijderen</string>
    <string name="factuur">Factuuradres</string>
    <string name="klantnaam">Contactpersoon</string>
    <string name="telefoon">Telefoonnummer</string>
    <string name= "opslaan">Opslaan</string>

</resources>
