<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/home"
        android:icon="@drawable/potje"
        android:title="@string/home"
        yourapp:showAsAction="always"/>
	
    <item
        android:id="@+id/contact"
        android:icon="@drawable/ic_action_call"
        android:title="@string/contact"
        yourapp:showAsAction="always"/>
    
    <item
        android:id="@+id/cart"
        android:icon="@drawable/cart"
        android:title="@string/winkelwagen"
        yourapp:showAsAction="always"/>
    
    <item
        android:id="@+id/menulist"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/startknop"
        yourapp:showAsAction="always"/>
</menu>
