<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/potje"
        android:title="@string/home"
        yourapp:showAsAction="ifRoom"/>
	
    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_action_call"
        android:title="@string/contact"
        yourapp:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/cart"
        android:title="@string/winkelwagen"
        yourapp:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_menulist"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/startknop"
        yourapp:showAsAction="ifRoom"/>
</menu>