<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/EersteGebruikLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wtm_achtergrond" >

    <EditText
        android:id="@+id/klant_factuur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/klant_telefoon"
        android:layout_centerVertical="true"
        android:ems="10"
        android:background="#EEEEEE"
        android:hint="@string/factuur"
        android:inputType="text" />

    <EditText
        android:id="@+id/klant_naam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/klant_factuur"
        android:layout_alignLeft="@+id/klant_factuur"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:background="#EEEEEE"
        android:hint="@string/klantnaam"
        android:inputType="text" />
	
	<TextView
        android:id="@+id/EersteGebruikTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#EEEEEE"
        android:text="@string/gegevens" />
    
    <EditText
        android:id="@+id/editbedrijf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/klant_naam"
        android:layout_alignLeft="@+id/klant_naam"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:background="#EEEEEE"
        android:hint="@string/bedrijf"
        android:inputType="text" />

    <EditText
        android:id="@+id/klant_telefoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editmail"
        android:layout_below="@+id/klant_factuur"
        android:layout_marginTop="38dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:hint="@string/telefoon"
        android:inputType="number" />

    <EditText
        android:id="@+id/editmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/klant_telefoon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_eerste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EersteGebruikTextView"
        android:layout_below="@+id/editmail"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="36dp"
        android:onClick="putInSP"
        android:text="@string/opslaan" />
    
</RelativeLayout>