<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DataLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wtm_achtergrond" >

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_address"
        android:layout_below="@+id/edit_name"
        android:layout_marginTop="30dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/telefoon"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/FirstUseTextView"
        android:layout_below="@+id/edit_address"
        android:layout_marginTop="30dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_mail"
        android:layout_below="@+id/edit_phone"
        android:layout_marginTop="30dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/factuur"
        android:inputType="text" />

    <TextView
        android:id="@+id/FirstUseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="#EEEEEE"
        android:text="@string/gegevens"
        android:textSize="20sp" 
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edit_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/FirstUseTextView"
        android:layout_below="@+id/FirstUseTextView"
        android:layout_marginTop="30dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/bedrijf"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_company"
        android:layout_below="@+id/edit_company"
        android:layout_marginTop="30dp"
        android:background="#EEEEEE"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/klantnaam"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_eerste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_mail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="putInSP"
        android:gravity="center_horizontal"
        android:text="@string/opslaan" />
    
</RelativeLayout>